kubernetes/apps/default/jellyseerr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyseerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  egress:
    - toEndpoints: [{matchLabels: {app.kubernetes.io/name: lidarr}}]
      toPorts: &http [{ports: [{port: "80", protocol: TCP}]}]
    - toEndpoints: [{matchLabels: {app.kubernetes.io/name: radarr}}]
      toPorts: *http

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: In
              values: [media]
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
